--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/favicon.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="alternate icon" type="image/jpg" href="/favicon.jpg" />
     <link rel="apple-touch-icon" href="/favicon.jpg" />
+    <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hey.Naimish - Quality education made accessible for everyone. Learn with the best courses and interactive tools." />
     <meta name="keywords" content="Hey.Naimish, online learning, education, courses, LMS, e-learning" />
